fixed bug where user list scroll disappeared and stopped working when images got too small. finished project first part, started second one.

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   cursor: default;
-  background-color: lightgray;
+  background-color: #d3d3d3;
 }
 
 .App-logo {
@@ -31,6 +31,9 @@
 
 .App-nav{
   padding: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .App-link {
@@ -83,7 +86,7 @@
 }
 
 .App-footer h3 {
-  color: lightgray;
+  color: #d3d3d3;
   margin: 10px 0px;
 }
 
