--- a/src/pages/UserListing/UserListing.css
+++ b/src/pages/UserListing/UserListing.css
@@ -8,10 +8,11 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    /*top: 17.5vh; 5.5vh from page title + 12vh from app header */
-    height: 70vh;
+    /*top: 17.5vh; 5.5vh from page title + 12vh from app header, 1px is a 'min-margin' */
+    height: calc(70vh - 1px);
     overflow: auto;
     position: relative;
+    box-sizing: border-box;
 }
 
 
@@ -21,13 +22,11 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-
     padding: 20px 5.6617vw ;
     margin-top: 1px;
     box-sizing: border-box;
     background-image: linear-gradient(#31324F, #1F202E);
     width: 100%;
-
     color: #FFFFFF;
 }
 
@@ -36,10 +35,13 @@
 }
 
 .user-row figure img {
-    border-radius: 50%
+    border-radius: 50%;
+    max-width: 100%;
+    min-width: 75px;
+    height: auto;
 }
 
-.user-wrapper1 {
+.user-wrapper {
     width: 100%;
     max-width: 900px;
     display: flex;
@@ -51,6 +53,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    max-width: calc(100% - 67px);
 }
 
 .user-data {
